# DISPATCHER-0.0.2

./: .draft.txt  .flag_001.txt  pyproject.toml  requirements.txt
app/: main.py  oauth2.py  schemas.py
app/data_access/: crud.py  database.py  models.py
app/routers/: auth.py  msg.py  user.py
